--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,18 @@ table {
     box-sizing: border-box;
 }
 
+nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 800px;
+    margin: 2% auto;
+    color: black;
+
+}
+
+
+
 html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
@@ -70,11 +82,20 @@ p {
     width: 800px;
     margin: 0 auto;
 }
+.containerabout{
+    width: 800px;
+    margin: 0 auto;
+
+}
 
 .top-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+.top-contentabout{
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
@@ -84,6 +105,11 @@ p {
     padding: 0 1%;
     padding-bottom: 20px;  
 }
+.top-contentabout .text-containerabout{
+    padding: 0 1%;
+    padding-bottom: 20px;  
+}
+
 
 .middle-content {
     margin-bottom: 20px;
@@ -112,6 +138,7 @@ p {
     justify-content: center;
 }
 
+
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -138,9 +165,27 @@ footer nav {
     align-items: center;
     padding: 20px 2%;
     font-size: 14px;
+
 }
 
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.bottom-contentabout{
+    display: flex;
+    margin: 0 2% 20px;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
+.bottom-contentabout .text-containerabout{
+    padding: 0 1%;
+    padding-bottom: 20px;  
+}
+
+button{
+    border: 2px solid black;
+    border-radius: 10px;
 }
